# whale_mot

./: .gitignore  create_folder_tree.sh  pyproject.toml  requirements.txt  some_notes.txt
configs/detectors/: yolov11_only_config.yaml
configs/experiments/: norfair.yaml  yolo_norfair.yaml  yolo_norfair_config.yaml
configs/trackers/: botsort.yaml  bytetrack.yaml
outputs/detections/: sample_detections.csv
outputs/tracks/: sample_tracks.csv
scripts/: run_detection_only.py  run_experiment.py  run_tracking_only.py  visualize_detections.py  visualize_tracks.py
src/whale_mot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/whale_mot/common/: io.py  types.py
src/whale_mot/detectors/: base.py  registry.py  ultralytics_detector.py
src/whale_mot/evaluation/: convert_gt_to_csv_detection.py  convert_gt_to_csv_tracking.py  detection_metrics.py  track_continuity.py  tracking_metrics.py
src/whale_mot/pipelines/: detection_only.py  experiment.py  tracking_only.py
src/whale_mot/trackers/: base.py  botsort.py  bytetrack.py  norfair_tracker.py  registry.py
